# computer-graphics

./: .gitignore  CMakeLists.txt  ColorFragmentShader.fragmentshader  DDD.cpp  LICENSE  TransformVertexShader.vertexshader  check_version.cpp  circle.cpp  grafkom.hpp  kubusmutar.cpp  objects.hpp  paths.txt  paths2.txt  readme.md  rollercoaster.cpp  rumah.cpp  things.hpp
common/: controls.cpp  controls.hpp  objloader.cpp  quaternion_utils.cpp  shader.cpp  tangentspace.cpp  text2D.cpp  texture.cpp  vboindexer.cpp
custom/: shapes.hpp  simple.hpp  things.hpp  utils.hpp
custom/base/: Color.cpp  Color.hpp  Object.cpp  Object.hpp
custom/shapes/: Box.cpp  Box.hpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Prism.cpp  Prism.hpp  Pyramid.cpp  Sphere.hpp
custom/simple/: Plane.hpp  Sun.cpp  Sun.hpp
custom/things/: Car.cpp  Car.hpp  Cloud.hpp  Locomotive.cpp  Locomotive.hpp  Thing.cpp  Thing.hpp  Train.cpp  Train.hpp  Tree.cpp  Tree.hpp
custom/utils/: BezierCurve.cpp  BezierCurve.hpp  pathway.cpp  pathway.hpp  utils.cpp
customs/: shapes.hpp  simple.hpp  things.hpp  utils.hpp
customs/base/: Color.cpp  Color.hpp  Coord.cpp  Coord.hpp  Object.cpp  Object.hpp
customs/shapes/: Ball.cpp  Ball.hpp  Box.cpp  Box.hpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Plane.cpp  Plane.hpp  Prism.cpp  Prism.hpp  Pyramid.cpp  Pyramid.hpp  Sphere.cpp  Sphere.hpp
customs/simple/: Plane.cpp  Plane.hpp  Sun.cpp
customs/things/: Car.cpp  Car.hpp  Cloud.cpp  ComplexObject.cpp  ComplexObject.hpp  Sun.cpp  Sun.hpp  Thing.cpp  Thing.hpp  Train.cpp  Train.hpp  Tree.cpp  Tree.hpp
customs/utils/: BezierCurve.cpp  BezierCurve.hpp  curve.cpp  curve.hpp  pathway.cpp  pathway.hpp  tranform_matrix.cpp  tranform_matrix.hpp  utils.cpp  utils.hpp  vector_operations.cpp  vector_operations.hpp
distrib/: selectoptimus.cpp
